--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "_zsh/.zshrc.d/zsh-vi-mode"]
 	path = _zsh/.zshrc.d/zsh-vi-mode
 	url = https://github.com/jeffreytse/zsh-vi-mode.git
+[submodule "_zsh/.zshrc.d/zsh-history-substring-search"]
+	path = _zsh/.zshrc.d/zsh-history-substring-search
+	url = https://github.com/zsh-users/zsh-history-substring-search.git
+[submodule "_zsh/.zshrc.d/zsh-syntax-highlighting"]
+	path = _zsh/.zshrc.d/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
