tweak highlights, git in vim

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -7,5 +7,10 @@
       "filetypes": ["ocaml"]
     }
   },
-  "diagnostic.checkCurrentLine": true
+  "diagnostic.checkCurrentLine": false,
+  "diagnostic.enableMessage": "jump",
+  "hover.target": "float",
+  "hover.floatConfig": {
+    "maxHeight": 10
+  }
 }
