--- a/_zsh/.ssh/config
+++ b/_zsh/.ssh/config
@@ -6,3 +6,23 @@ Host lichen
   HostName lichen.labs.eait.uq.edu.au
   User s4529458
   ProxyJump moss
+
+Host control
+  HostName comp3301-vm1.eait.uq.edu.au
+  User control
+  ProxyJump moss
+
+Host console 
+  HostName comp3301-vm1.eait.uq.edu.au
+  User console 
+  ProxyJump moss
+
+Host vm 
+  HostName 10.138.64.157
+  User s4529458
+  ProxyJump moss
+
+Host vm-root
+  HostName 10.138.64.157
+  User root
+  ProxyJump moss
