limit git indexing and forward.

--- a/_zsh/.ssh/config
+++ b/_zsh/.ssh/config
@@ -1,6 +1,7 @@
 Host moss
   HostName moss.labs.eait.uq.edu.au
   User s4529458
+  ForwardAgent yes
 
 Host lichen
   HostName lichen.labs.eait.uq.edu.au
@@ -20,9 +21,11 @@ Host console
 Host vm 
   HostName 10.138.64.157
   User s4529458
+  ForwardAgent yes
   ProxyJump moss
 
 Host vm-root
   HostName 10.138.64.157
   User root
+  ForwardAgent yes
   ProxyJump moss
