--- a/_zsh/.ssh/config
+++ b/_zsh/.ssh/config
@@ -29,3 +29,15 @@ Host vm-root
   User root
   ForwardAgent yes
   ProxyJump moss
+
+
+Host getafix
+  HostName getafix.smp.uq.edu.au
+  User s4529458
+  ForwardX11 yes
+
+Host rangpur
+  HostName rangpur.compute.eait.uq.edu.au
+  User s4529458
+  ProxyJump moss
+  ForwardX11 yes
