--- a/font/.config/fontconfig/conf.d/99-emoji.conf
+++ b/font/.config/fontconfig/conf.d/99-emoji.conf
@@ -4,17 +4,17 @@ Run `fc-cache` after installing this file.
 -->
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
- <match target="pattern">
-        <test qual="any" name="family"><string>monospace</string></test>
-        <edit name="family" mode="append" binding="weak"><string>Noto Color Emoji</string></edit>
-    </match>
-    <match target="pattern">
-        <test qual="any" name="family"><string>serif</string></test>
-        <edit name="family" mode="append" binding="strong"><string>Noto Color Emoji</string></edit>
-    </match>
-  <match target="pattern">
-        <test qual="any" name="family"><string>sans-serif</string></test>
-        <edit name="family" mode="append" binding="strong"><string>Noto Color Emoji</string></edit>
-    </match>
- <dir>~/.fonts</dir>
+ <!-- <match target="pattern"> -->
+ <!--        <test qual="any" name="family"><string>monospace</string></test> -->
+ <!--        <edit name="family" mode="append" binding="weak"><string>Noto Color Emoji</string></edit> -->
+ <!--    </match> -->
+ <!--    <match target="pattern"> -->
+ <!--        <test qual="any" name="family"><string>serif</string></test> -->
+ <!--        <edit name="family" mode="append" binding="strong"><string>Noto Color Emoji</string></edit> -->
+ <!--    </match> -->
+ <!--  <match target="pattern"> -->
+ <!--        <test qual="any" name="family"><string>sans-serif</string></test> -->
+ <!--        <edit name="family" mode="append" binding="strong"><string>Noto Color Emoji</string></edit> -->
+ <!--    </match> -->
+ <!-- <dir>~/.fonts</dir> -->
 </fontconfig>
