--- a/_zsh/.config/autostart/swap_esc_caps.sh.desktop
+++ b/_zsh/.config/autostart/swap_esc_caps.sh.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Exec=/home/rina/.config/autostart/swap_esc_caps.sh
+Exec=/home/rina/.local/bin/swap_esc_caps.sh
 Icon=dialog-scripts
 Name=swap_esc_caps.sh
 Type=Application
