--- a/_zsh/.gitconfig
+++ b/_zsh/.gitconfig
@@ -11,3 +11,9 @@
 	d = diff
 [core]
 	editor = nvim
+[pull]
+	rebase = true
+[url "https://invent.kde.org/"]
+	insteadOf = kde:
+[url "ssh://git@invent.kde.org/"]
+	pushInsteadOf = kde:
