use lichen for proxyjumps.

--- a/_zsh/.ssh/config
+++ b/_zsh/.ssh/config
@@ -6,29 +6,28 @@ Host moss
 Host lichen
   HostName lichen.labs.eait.uq.edu.au
   User s4529458
-  ProxyJump moss
 
 Host control
   HostName comp3301-vm1.eait.uq.edu.au
   User control
-  ProxyJump moss
+  ProxyJump lichen
 
 Host console 
   HostName comp3301-vm1.eait.uq.edu.au
   User console 
-  ProxyJump moss
+  ProxyJump lichen
 
 Host vm 
   HostName 10.138.64.157
   User s4529458
   ForwardAgent yes
-  ProxyJump moss
+  ProxyJump lichen
 
 Host vm-root
   HostName 10.138.64.157
   User root
   ForwardAgent yes
-  ProxyJump moss
+  ProxyJump lichen
 
 
 Host getafix
