touch gitconfig, p10k, ssh for thesis + os

--- a/_zsh/.ssh/config
+++ b/_zsh/.ssh/config
@@ -17,6 +17,12 @@ Host console
   User console 
   ProxyJump lichen
 
+Host moo
+  HostName localhost
+  User rina
+  ForwardAgent yes
+  Port 2222
+
 Host vm 
   HostName 10.138.64.157
   User s4529458
