--- a/_zsh/.ssh/config
+++ b/_zsh/.ssh/config
@@ -3,6 +3,10 @@ Host moss
   User s4529458
   ForwardAgent yes
 
+Host mango
+  HostName remote.eait.uq.edu.au
+  User uqklam5
+
 Host lichen
   HostName lichen.labs.eait.uq.edu.au
   User s4529458
@@ -46,3 +50,9 @@ Host rangpur
   User s4529458
   ProxyJump moss
   ForwardX11 yes
+
+Host pac
+  User klam
+  HostName 10.176.133.16
+  ProxyJump mango
+
