--- a/_zsh/.ssh/config
+++ b/_zsh/.ssh/config
@@ -56,3 +56,9 @@ Host pac
   HostName 10.176.133.16
   ProxyJump mango
 
+Host sdn
+  HostName localhost
+  Port 2000
+  User sdn
+  ForwardX11 yes
+  ProxyJump precision3581-026
