--- a/_zsh/.config/jj/config.toml
+++ b/_zsh/.config/jj/config.toml
@@ -6,5 +6,12 @@ email = "k@rina.fyi"
 auto-track = "none()"
 
 [aliases]
-l = ["log", '-r', 'ancestors(@, 4) | descendants(@, 4)', "--no-pager"]
+context = ["log", '-r', 'ancestors(@, 4) | descendants(@, 4)', "--no-pager"]
+s = ["status", "--no-pager"]
 lmain = ["log", "-r", "(main..@):: | (main..@)-"]
+fetch = ["git", "fetch", "--all-remotes"]
+remotebranches = ["log", "-r", '@ | ancestors(remote_bookmarks(), 2) | trunk()']
+localwork = ["log", "-r", '@ | ancestors(remote_bookmarks().., 2) | trunk()', '--no-pager']
+
+[ui]
+default-command = "context"
